package fi.delektre.ringa.ring_thesis.util;

public class SelectorOption {
    public final int imageDrawableResource;
    public final String optionName;

    public SelectorOption(int imageDrawableResource, String optionName) {
        this.imageDrawableResource = imageDrawableResource;
        this.optionName = optionName;
    }
}
